test/tasty/neg/src-2/TestDependentExtension.check
TestDependentExtension_fail.scala:11: error: Unsupported Scala 3 extension method with secondary type parameter list: extract; found in trait tastytest.DependentExtension.
    val res = implicitly[DependentExtension].extract(box)(_ + 1)
                                             ^
1 error
